[gd_scene load_steps=2 format=3 uid="uid://dnvwguwi5kwow"]

[ext_resource type="Script" path="res://quiz.gd" id="1_ti1tv"]

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ti1tv")

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.184314, 0.286275, 0.419608)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -244.0
offset_right = 384.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.305882, 0.419608, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -212.0
offset_right = 280.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.123699, 0.225697, 0.289507, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -196.0
offset_right = 256.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -12.0
offset_right = 176.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 68.0
offset_right = 176.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 148.0
offset_right = 176.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
